public/css/main.css
/* ... */
html {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
caption, th, td {
  text-align: left;
  font-weight: normal;
  vertical-align: middle;
}
q, blockquote {
  quotes: none;
}
q:before, q:after, blockquote:before, blockquote:after {
  content: "";
  content: none;
}
a img {
  border: none;
}
article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
  display: block;
}
html, body {
  height: 100%;
  min-height: 100%;
}
body {
  height: 100%;
  line-height: 1;
  min-height: 100vh;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}
*:focus,
*:active,
*:hover {
  outline: none;
}
*,
*:after,
*:before {
  box-sizing: border-box;
}
input,
select,
textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  text-indent: 0.01px;
  text-overflow: '';
}
h1 {
  font-size: 30px;
  line-height: 1em;
}
h2 {
  font-size: 42px;
  line-height: 42px;
}
h3 {
  font-size: 34px;
  line-height: 34px;
}
h4 {
  font-size: 28px;
  line-height: 28px;
}
h5 {
  font-family: "sf bold", Helvetica, Arial, sans-serif;
  font-size: 22px;
  line-height: 22px;
  margin-bottom: 35px;
  text-align: center;
}
.body-wrapper {
  flex: 1 0 auto;
  margin-top: 0;
}
.wrapper {
  display: flex;
  flex-direction: column;
  font-family: "sf regular", Helvetica, Arial, sans-serif;
  height: 100%;
  margin: 0 auto;
  position: relative;
  width: 100%;
}
p {
  font-family: "sf regular", Helvetica, Arial, sans-serif;
  font-size: 15px;
  line-height: 1.5em;
}
p.upgrade-option {
  color: #3290c5;
  cursor: pointer;
  font-size: 1.5em;
}
p.large {
  font-size: 1.2em;
  margin: 0 auto;
  width: 90%;
}
p + p {
  margin-top: 15px;
}
a, a:visited, a:active {
  color: #215CA0;
  text-decoration: none;
}
a:hover {
  color: #003c4c;
}
strong {
  font-family: "sf bold", Helvetica, Arial, sans-serif;
}
.content-wrapper {
  margin: 0 auto;
  padding: 0 16px;
}
.component {
  margin: 0 auto 30px;
  text-align: center;
  width: 100%;
}

.sf-logo {
  display: inline-block;
  margin: 10px 0;
}

.back-link-header.reveal{
  display: flex;
  position: relative;
  font-size: 16pt;
  bottom: 0px;
}

.back-link-button {
  font-size: 1em;
  padding: 5px 15px;
  background-color:white;
  color :#215CA0;
  border: single;
  border-color: #215CA0;
  border-radius: 6px;
  box-shadow: 6px 6px 15px 5px rgba(0,0,0,0.3);
}

.back-link-header {
  display: none;
}

.header-container {
  background: #00A1E0;
  margin-bottom: 25px;
  overflow: auto;
  padding: 25px 0;
}
.header-container .content-wrapper {
  height: 100%;
  overflow: none;
}
.header-container h1 {
  color: #fff;
  font-family: "sf thin", Helvetica, Arial, sans-serif;
  line-height: 1.25em;
}
.header-container .half {
  width: 50%;
  float: left;
}
.header-container .half p {
  font-family: "sf light", Helvetica, Arial, sans-serif;
  margin-bottom: 10px;
}
.header-container .half:nth-child(2) {
  padding: 0 0 0 80px;
}
.general-content {
  margin: 35px 0;
}
.general-content h4 {
  margin-bottom: 25px;
}
.general-content img {
  margin: 5px 0 5px;
  width: 100%;
}
.divider {
  width: 100%;
  height: 2px;
  background: #7C868D;
}
.form-error-msg {
  border: 2px solid #ff0000;
}
.upgrade-content {
  text-align: center;
}
.upgrade-content .component.upgrade-info {
  border: 0 none;
  padding: 0;
  width: 100%;
  margin: 0 auto 0;
  max-height: 0;
  overflow: hidden;
  padding: 0;
  -moz-transition-duration: 0.3s;
  -webkit-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
  transition-duration: 0.3s;
}
.upgrade-content .component.upgrade-info.reveal {
  border-top: 2px solid #00A1E0;
  height: auto;
  margin: -25px auto 0px;
  max-height: 500px;
  overflow: hidden;
  padding: 20px;
  -moz-transition-duration: 0.3s;
  -webkit-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
  transition-duration: 0.3s;
}
.upgrade-content h3, .upgrade-content p {
  margin-bottom: 15px;
}
.upgrade-content .upgrade-option {
  border: 2px solid #00A1E0;
  margin: 25px auto;
  padding: 15px 20px;
  width: 350px;
}
.upgrade-content .component.upgrade-info.reveal:first-of-type {
  margin: -25px auto 0;
}
.upgrade-content .upgrade-option:hover {
  background: #00A1E0;
  color: #fff;
}
.helpful-links {
  margin: 25px auto 25px;
  width: 65%;
}
.helpful-links h4 {
  margin-bottom: 15px;
}
.footer-wrapper {
  background: #081e29;
  color: #fff;
  font-size: 12px;
  margin-top: 25px;
  padding: 35px 0;
  width: 100%;
}
.footer-wrapper .footer-links {
  padding-bottom: 10px;
}
.footer-wrapper a, .footer-wrapper a:visited, .footer-wrapper a:active {
  text-decoration: none;
  color: #3290c5;
}
.footer-wrapper a:hover {
  color: #fff;
}

input {
  background: transparent;
  border: 2px solid #00A1E0;
  border-radius: 0;
  color: #032E61;
  font-family: "sf regular", Helvetica, Arial, sans-serif;
  font-size: 15px;
  margin: 20px 0 0px;
  outline: none;
  padding: 10px;
  -webkit-appearance: none;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 250px;
}

input.button {
  width: auto;
}

input.button:hover {
  background: #00A1E0;
  color: #fff;
}

.instance-display {
  background-color: white;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0px;
  margin-bottom: 25px;
}

.instance-display-home {
  background-color: rgb(0, 116, 161);
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 5px;
  margin-bottom: 15px;
  margin-top: -25px;
}

.instance-display-site {
  background-color: lightsalmon;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 5px;
}

.sandbox-table {
  margin: 20px 0px 20px 0px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

tr:nth-child(even) {
  background-color: #dddddd;
}
/* ... */

